# Dzongkha-Names-For-Mushroom-

./: pyproject.toml  requirements.txt
core/: settings.py  urls.py
detector/: model.h5  views.py
detector/templates/detector/: index.html
