[tool.poetry]
name = "mushroom-identifier"
version = "0.1.0"
description = ""
authors = ["pemtshewang <pemtshewang500@gmail.com>"]
readme = "README.md"
packages = [{include = "mushroom_identifier"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
image = "^1.5.33"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
